I had issues with mastodon verification ergo i went ahead and fixed it like that

--- a/styles/global.css
+++ b/styles/global.css
@@ -297,3 +297,7 @@ a.pronoun:hover {
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
 }
+
+.mastodon {
+  display: none;
+}
