Re-wrote some translation files, modules, etc, ui changes, ux changes, and more.

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,8 @@ body {
   background-color: #121212;
   color: #e0e0e0;
   line-height: 1.6;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 body {
@@ -325,3 +327,4 @@ a.pronoun:hover {
 .mastodon {
   display: none;
 }
+
