--- a/styles/global.css
+++ b/styles/global.css
@@ -45,12 +45,16 @@ img {
 .language,
 .server {
   display: inline-block;
-  margin: 10px;
+  margin: 12px;
   transition: transform 0.2s ease;
   background-color: #1e1e1e;
   border-radius: 8px;
-  padding: 10px;
+  padding: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+.server {
+  margin-left: 27px; 
+  /*This is cursed.*/
 }
 
 .platform:hover,
